--- a/loggedin.html
+++ b/loggedin.html
@@ -72,7 +72,7 @@
             <p id="space" class="text"></p>
         </div>
         <div>
-            <button onclick="showTracks()" id="nbutton" class="btn btn-primary">
+            <button onclick="nextSection()" id="nbutton" class="btn btn-primary">
                 < PREVIOUS</button>
                     <button onclick="onPageLoad()" id="" class="btn btn-primary rbutton">
                         < RESTART</button>
