--- a/loggedin.html
+++ b/loggedin.html
@@ -43,7 +43,7 @@
         <div>
             <p id="artText" class="text"></p>
         </div>
-        <div><button onclick="nextSection()" id="nbutton" class="btn btn-primary">NEXT > </button></div>
+        <div><button onclick="nextSection()" id="login" class="btn btn-primary">NEXT > </button></div>
 
 
     </div>
