--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <h1 class="headings">Set the Vibe. </h1>
     <div id="fail"></div>
     <div id="tokenSection">
-        <div id="lbutton"><button onclick="auth()" class="btn btn-primary">LOG IN TO SPOTIFY </button></div>
+        <div id="lbutton"><button onclick="auth()" class="login btn-primary">LOG IN TO SPOTIFY </button></div>
     </div>
 
     <!-- <div id="appSection">
