--- a/loggedin.html
+++ b/loggedin.html
@@ -24,9 +24,7 @@
 
 <body onload="onPageLoad()" class="backdrop" style="font-family: Montserrat;">
     <nav class="navbar">
-        <a class="navbar-brand" href="#">
-            <img src="/docs/4.0/assets/brand/bootstrap-solid.svg" width="30" height="30"
-                class="d-inline-block align-top" alt="">
+        <a class="navbar-brand" href="">
             Music Recommender
         </a>
     </nav>
