--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <body onload="onPageLoad()" class="backdrop" style="font-family: Montserrat;">
     <nav class="navbar">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="">
             Music Recommender
         </a>
     </nav>
