--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             Music Recommender
         </a>
     </nav>
-    <h1 class="headings">Set the Vibe. </h1>
+    <h1 class="headings">Set the Mood. </h1>
     <div id="fail"></div>
     <div id="tokenSection">
         <div id="lbutton"><button onclick="auth()" class="btn btn-primary">LOG IN TO SPOTIFY </button></div>
