--- a/loggedin.html
+++ b/loggedin.html
@@ -28,7 +28,7 @@
             Music Recommender
         </a>
     </nav>
-    <h1 class="headings">Set the Vibe. </h1>
+    <h1 class="headings">Set the Mood. </h1>
     <div id="fail" style="display: none;">
         <h3 class="subheadings">LOGIN FAILED. SIGN IN AGAIN.</h3>
         <div id="lbutton"><button onclick="auth()" class="btn btn-primary">LOG IN TO SPOTIFY </button></div>
@@ -63,7 +63,7 @@
     </div>
 
     <div id="recSection" style="display: none;">
-        <h2 class="subheadings">We have just what you're looking for.</h2>
+        <h2 class="subheadings">This is just what you're looking for.</h2>
 
         <div id="recSec"></div>
         <div>
