--- a/loggedin.html
+++ b/loggedin.html
@@ -74,7 +74,7 @@
                 < PREVIOUS</button>
                     <button onclick="onPageLoad()" id="" class="btn btn-primary rbutton">
                         < RESTART</button>
-                            <button onclick="createPlaylist()" id="playlist" class="btn btn-primary rbutton">
+                            <button onclick="createPlaylist()" id="playlist" class="btn btn-primary pbutton">
                                 CREATE PLAYLIST +</button>
         </div>
     </div>
